# qrcode

./: CMakeLists.txt  package.xml  readme.txt
data/: Logitech_Notebook_Pro (copy).cal  cloudplat_camera (copy).cal  cloudplat_camera.cal~  go1080m.cal  go1080m.cal~  gopro (copy).cal  ost.txt  ost.yaml
launch/: program4.launch
src/: camera.cpp  qr_detection_multi.cpp  qr_detection_single.cpp
